# hopperkv

./: .clang-format  .gitignore  .gitmodules  ARTIFACT.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: cmake.yml  format.yml
driver/: ckpt.py  env.py  launch.py  remote_launch_clients.py  run.py  run_mp.py  utils.py
driver/client/: __main__.py  adaptor.py  epoch.py  preload.py
driver/client/workload/: __init__.py  base.py  distrib.py  kv_format.py  offset.py  replay_workload.py  synthetic_workload.py
experiments/: copy_files.sh  create_ckpt.sh  create_ckpt_dyn_global.sh  create_ckpt_scale_global.sh  create_table_csv.sh  prepare_artifact.sh  run_artifact.sh  run_dyn.sh  run_scale.sh  run_trace.sh  run_trace_1g.sh  run_trace_512m.sh  run_var_distrib.sh  run_var_ws.sh  run_ycsb.sh
hopperkv/: hopper_redis.py  utils.py
hopperkv/alloc/: controller.py  resrc.py  tenant.py
hopperkv/alloc/engine/: CMakeLists.txt  __init__.py  alloc.h  bind.cpp  log.h  mrc.h  params.cpp  params.h  resrc.h  tenant.h
hopperkv/alloc/engine/tests/: test_alloc.cpp  test_mrc.cpp
hopperkv/redis_module/: CMakeLists.txt  barrier.cpp  barrier.h  config.cpp  config.h  get.cpp  get.h  ghost.cpp  ghost.h  inflight.cpp  inflight.h  module.cpp  module.h  network.cpp  network.h  rate.h  resrc.cpp  resrc.h  set.cpp  set.h  stats.cpp  stats.h  storage.cpp  storage.h  task.h  utils.h
hopperkv/redis_module/dynamo/: CMakeLists.txt  README.md  dynamo.cpp  dynamo.h  test_dynamo.cpp  test_dynamo.sh
lib/: aws-sdk-cpp.sh
replay/: README.md  analyze_motiv.py  download_preprocess_trace.sh  download_trace.sh  prepare_db.sh  prepare_db_image.py  prepare_dynamo.py  preprocess.py  preprocess_trace.sh  ship_to_aws.sh  sim_lru.py  sim_mrc.py  streaming_download.py  trim_cache.sh  trim_cache_image.py
scripts/: analyze.py  bench_mrc.py  build.sh  dynamo_client.py  init_client.sh  init_server.sh  launch_servers.py  merge_data.py  merge_latency.py  merge_mp_data.py  parse_mrc.py  plot_latency_cdf.py  plot_mp.py  plot_mrc.py  plot_style.py  plot_timeline.py  plot_tput_latency.py  plot_util.py  plot_var.py  process_mp_data.sh  profile_memory.py  profile_mrc.py  pull_mp_data.sh
