[project]
name = "hopperkv"
version = "0.1.0"
description = "HopperKV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.39.9",
    "hdrhistogram>=0.10.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pybind11>=3.0.0",
    "redis>=6.2.0",
    "xxhash>=3.5.0",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.typos]
files.extend-exclude = ["lib/*"]

[tool.ruff]
exclude = ["./build", "./ckpt", "./lib", "./results", "./trace"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
